// import 'react-native';
// import React from 'react';
// import { shallow } from 'enzyme';
//
// import ProductList from '../ProductList';
//
// describe('ProductList', () => {
//     it('renders correctly', () => {
//         const cart = {
//             totalProducts: 0,
//             products: {}
//         };
//         const products = [
//             {
//                 quantity: 1,
//                 title: 'Type 1 code 1',
//                 thumbnail_image: 'image',
//                 price: '$3.49',
//                 productCode: '1'
//             }
//         ];
//         const wrapper = shallow(<ProductList cart={cart} products={products} />);
//         expect(wrapper).toMatchSnapshot();
//     });
//
//     it('renders correctly with selected item', () => {
//         const cart = {
//             totalProducts: 1,
//             products: {
//                 1: {
//                     1: {
//                         quantity: 1
//                     }
//                 }
//             }
//         };
//         const products = [
//             {
//                 quantity: 1,
//                 title: 'Type 1 code 1',
//                 thumbnail_image: 'image',
//                 price: '$3.49',
//                 productCode: '1'
//             }
//         ];
//         const wrapper = shallow(<ProductList cart={cart} products={products} />);
//         expect(wrapper).toMatchSnapshot();
//     });
// });
